# aioairzone-cloud

./: .gitignore  README.md  pylintrc  pyproject.toml  requirements_lint.txt  setup.py
.github/workflows/: ci.yml
aioairzone_cloud/: __init__.py  aidoo.py  air_quality.py  cloudapi.py  common.py  const.py  device.py  device_group.py  entity.py  exceptions.py  group.py  hotwater.py  hvac.py  installation.py  output.py  system.py  token.py  webserver.py  websockets.py  zone.py
docs/: airzone-cloud-api-auth-login.json  airzone-cloud-api-auth-token-refresh.json  airzone-cloud-api-device-system-config.json  airzone-cloud-api-device-system-status.json  airzone-cloud-api-device-zone-master-config.json  airzone-cloud-api-device-zone-master-status.json  airzone-cloud-api-device-zone-slave-config.json  airzone-cloud-api-device-zone-slave-status.json  airzone-cloud-api-installation.json  airzone-cloud-api-installations.json  airzone-cloud-api-ws-status.json  diagnostics-airzone-aidoo.json  diagnostics-airzone-flexa.json
examples/: _secrets.py  basic.py  change-device-params.py  change-group-params.py  raw-data.py  select-installation-group.py  select-installation-webserver.py  select-installation.py  select.py  token-refresh.py
